[gd_scene load_steps=55 format=3 uid="uid://ck3y2as0labp0"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_cr5rv"]
[ext_resource type="Script" path="res://Scripts/State/stateFactory.gd" id="2_7igkb"]
[ext_resource type="Script" path="res://Scripts/State/player states/playerIdle.gd" id="3_k086q"]
[ext_resource type="Texture2D" uid="uid://bg5c6q3i5107" path="res://Sprites/Kin/new kin.png" id="3_qlsd8"]
[ext_resource type="Texture2D" uid="uid://dr1cy8d7cna7w" path="res://Sprites/TPP/tppfull.png" id="4_ky4s4"]
[ext_resource type="Script" path="res://Scripts/State/player states/playerWalking.gd" id="4_v361r"]
[ext_resource type="Script" path="res://Scripts/State/player states/playerStop.gd" id="5_c0d7w"]
[ext_resource type="Texture2D" uid="uid://b8qu16q0dlmwd" path="res://Sprites/lights/light-sheet0.png" id="5_qpng8"]
[ext_resource type="PackedScene" uid="uid://b75y4tjamjhxd" path="res://Instances/Level Components/teleportRange.tscn" id="6_6y066"]
[ext_resource type="Script" path="res://Scripts/State/player states/playerJump.gd" id="6_40u7v"]
[ext_resource type="Script" path="res://Scripts/State/player states/playerFalling.gd" id="7_u8qku"]
[ext_resource type="Script" path="res://Scripts/State/player states/playerStretch.gd" id="8_sjiu6"]
[ext_resource type="AudioStream" uid="uid://c1666rseg7wjt" path="res://Audio/sfx/grassStep-01.ogg" id="8_vg4jm"]
[ext_resource type="AudioStream" uid="uid://buope0rqbdyn8" path="res://Audio/sfx/grassStep-02.ogg" id="9_7ukhu"]
[ext_resource type="Script" path="res://Scripts/State/player states/playerTalking.gd" id="9_bgynj"]
[ext_resource type="AudioStream" uid="uid://dlvp15rgvkl2g" path="res://Audio/sfx/grassStep-03.ogg" id="10_yc71b"]
[ext_resource type="AudioStream" uid="uid://rjkd5e5f8lks" path="res://Audio/sfx/concretestep1.ogg" id="11_u8ed2"]
[ext_resource type="AudioStream" uid="uid://svt0a04xus22" path="res://Audio/sfx/concretestep2.ogg" id="12_2jc7n"]
[ext_resource type="AudioStream" uid="uid://junj2m4vfse4" path="res://Audio/sfx/concretestep3.ogg" id="13_yi6rr"]
[ext_resource type="AudioStream" uid="uid://d4aw3nbwb6ct" path="res://Audio/sfx/wood_step-01.ogg" id="14_mbwwd"]
[ext_resource type="AudioStream" uid="uid://osbuu3ys72w0" path="res://Audio/sfx/wood_step-02.ogg" id="15_breqs"]
[ext_resource type="AudioStream" uid="uid://dnvw53ep1vrqw" path="res://Audio/sfx/wood_step-03.ogg" id="16_1x2s6"]
[ext_resource type="AudioStream" uid="uid://cd7bmqexlqs4e" path="res://Audio/sfx/pickuptoo.ogg" id="23_hnh6d"]
[ext_resource type="AudioStream" uid="uid://bhay6ynm00fpy" path="res://Audio/sfx/fall thump.ogg" id="24_x075c"]
[ext_resource type="Script" path="res://Scripts/simplefootsteps.gd" id="25_v543r"]
[ext_resource type="TileSet" uid="uid://lgbtsst4op3c" path="res://Resources/Tile Sets/farmlandTiles.tres" id="26_gdvr1"]
[ext_resource type="TileSet" uid="uid://c0hksqeiy0e1e" path="res://Resources/Tile Sets/cityTiles.tres" id="27_fgwwr"]
[ext_resource type="TileSet" uid="uid://dt4v4h281e2h7" path="res://Resources/Tile Sets/apartments.tres" id="28_btkl4"]

[sub_resource type="Curve" id="Curve_bucuf"]
_data = [Vector2(0, 0.730769), 0.0, 0.0, 0, 0, Vector2(0.981884, 0.153846), -0.225859, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_8ca8h"]
colors = PackedColorArray(0.807843, 0.419608, 0.929412, 1, 0.807843, 0.6, 0.772549, 0.266667)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qna8a"]
radius = 14.0
height = 32.0

[sub_resource type="Animation" id="Animation_ur6mr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Walk"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:skew")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../footstepAudio:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_gpbgi"]
resource_name = "fall"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.01),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"Fall", &"Fall"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 1), Vector2(0, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.733333, 1.5)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:skew")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_dvtsf"]
resource_name = "idle"
length = 10.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.40706, 1.52742, 3.38463, 3.85212, 7.36343, 7.48378),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 0, 1, 0, 1, 0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:skew")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_d1l3n"]
resource_name = "jump"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.01),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"Jump", &"Jump"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.177716),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.4, 0.71875), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.177716),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 4.5), Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:skew")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_pg4dh"]
resource_name = "snapBack"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.688, 1.406), Vector2(1.375, 0.703), Vector2(0.8125, 1.23425), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -6), Vector2(0, 5), Vector2(0, -3), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_wln1a"]
resource_name = "stop"
length = 1.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.01),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Stop"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.01),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = false
tracks/4/path = NodePath(".:skew")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}

[sub_resource type="Animation" id="Animation_v0gao"]
resource_name = "stretch"
length = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Stretch"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:skew")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_tq1i8"]
resource_name = "stretchDown"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Stretch"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(0.420448, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.4375, 0.6875)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(0.420448, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 5)]
}

[sub_resource type="Animation" id="Animation_ulrw5"]
resource_name = "stretchUp"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Stretch"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(0.277393, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -6.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(0.277393, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.6875, 1.40625)]
}

[sub_resource type="Animation" id="Animation_m7s4w"]
resource_name = "walk"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Walk"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -2), Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:skew")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../footstepAudio:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cxkr1"]
_data = {
"RESET": SubResource("Animation_ur6mr"),
"fall": SubResource("Animation_gpbgi"),
"idle": SubResource("Animation_dvtsf"),
"jump": SubResource("Animation_d1l3n"),
"snapBack": SubResource("Animation_pg4dh"),
"stop": SubResource("Animation_wln1a"),
"stretch": SubResource("Animation_v0gao"),
"stretchDown": SubResource("Animation_tq1i8"),
"stretchUp": SubResource("Animation_ulrw5"),
"walk": SubResource("Animation_m7s4w")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_a0xk3"]
atlas = ExtResource("3_qlsd8")
region = Rect2(240, 0, 30, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ojj4"]
atlas = ExtResource("3_qlsd8")
region = Rect2(0, 0, 30, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x56w2"]
atlas = ExtResource("3_qlsd8")
region = Rect2(30, 0, 30, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvio0"]
atlas = ExtResource("3_qlsd8")
region = Rect2(210, 0, 30, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ohwml"]
atlas = ExtResource("3_qlsd8")
region = Rect2(150, 0, 30, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rf3cf"]
atlas = ExtResource("3_qlsd8")
region = Rect2(180, 0, 30, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwjhe"]
atlas = ExtResource("3_qlsd8")
region = Rect2(0, 0, 30, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2sxgm"]
atlas = ExtResource("3_qlsd8")
region = Rect2(60, 0, 30, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6x81"]
atlas = ExtResource("3_qlsd8")
region = Rect2(90, 0, 30, 32)

[sub_resource type="SpriteFrames" id="10"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a0xk3")
}],
"loop": true,
"name": &"Fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ojj4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x56w2")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvio0")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ohwml")
}],
"loop": true,
"name": &"Stop",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rf3cf")
}],
"loop": true,
"name": &"Stretch",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwjhe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2sxgm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6x81")
}],
"loop": true,
"name": &"Walk",
"speed": 10.0
}]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_r0502"]
closed = false
polygon = PackedVector2Array(-9, 3, -9, 4, -7, 4, 7, 4, 9, 4, 9, 3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4bcid"]
size = Vector2(32, 38)

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 2
collision_mask = 2
slide_on_ceiling = false
floor_constant_speed = true
script = ExtResource("1_cr5rv")

[node name="stateFactory" type="Node" parent="." node_paths=PackedStringArray("debugtext", "initial_state")]
script = ExtResource("2_7igkb")
debugtext = NodePath("../debugText")
initial_state = NodePath("playerIdle")

[node name="playerIdle" type="Node" parent="stateFactory" node_paths=PackedStringArray("player", "animPlayer", "playerSprite")]
script = ExtResource("3_k086q")
player = NodePath("../..")
animPlayer = NodePath("../../AnimationPlayer")
playerSprite = NodePath("../../AnimatedSprite2D")

[node name="playerWalking" type="Node" parent="stateFactory" node_paths=PackedStringArray("player", "animPlayer", "playerSprite", "footStream")]
script = ExtResource("4_v361r")
player = NodePath("../..")
animPlayer = NodePath("../../AnimationPlayer")
playerSprite = NodePath("../../AnimatedSprite2D")
footStream = NodePath("../../footstepAudio")

[node name="playerStop" type="Node" parent="stateFactory" node_paths=PackedStringArray("player", "animPlayer", "playerSprite")]
script = ExtResource("5_c0d7w")
player = NodePath("../..")
animPlayer = NodePath("../../AnimationPlayer")
playerSprite = NodePath("../../AnimatedSprite2D")

[node name="playerJump" type="Node" parent="stateFactory" node_paths=PackedStringArray("player", "animPlayer")]
script = ExtResource("6_40u7v")
player = NodePath("../..")
animPlayer = NodePath("../../AnimationPlayer")

[node name="playerFalling" type="Node" parent="stateFactory" node_paths=PackedStringArray("player", "animPlayer", "impactAudio")]
script = ExtResource("7_u8qku")
player = NodePath("../..")
animPlayer = NodePath("../../AnimationPlayer")
impactAudio = NodePath("../../fallThump")

[node name="playerStretch" type="Node" parent="stateFactory" node_paths=PackedStringArray("player", "animPlayer", "playerSprite", "teleportRange")]
script = ExtResource("8_sjiu6")
player = NodePath("../..")
animPlayer = NodePath("../../AnimationPlayer")
playerSprite = NodePath("../../AnimatedSprite2D")
teleportRange = NodePath("../../Teleport")

[node name="playerTalking" type="Node" parent="stateFactory" node_paths=PackedStringArray("player", "animPlayer", "playerSprite")]
script = ExtResource("9_bgynj")
player = NodePath("../..")
animPlayer = NodePath("../../AnimationPlayer")
playerSprite = NodePath("../../AnimatedSprite2D")

[node name="tppLine" type="Line2D" parent="."]
visible = false
z_index = -1
points = PackedVector2Array(0, 0, 58, -5)
width = 6.0
width_curve = SubResource("Curve_bucuf")
default_color = Color(0.807843, 0.6, 0.772549, 0.8)
gradient = SubResource("Gradient_8ca8h")
joint_mode = 2
end_cap_mode = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_qna8a")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimatedSprite2D")
libraries = {
"": SubResource("AnimationLibrary_cxkr1")
}

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 1
texture_filter = 1
sprite_frames = SubResource("10")
animation = &"Walk"

[node name="LightOccluder2D" type="LightOccluder2D" parent="AnimatedSprite2D"]
z_index = -1
occluder = SubResource("OccluderPolygon2D_r0502")

[node name="tpp" type="Sprite2D" parent="AnimatedSprite2D"]
z_index = -1
position = Vector2(0, -19)
texture = ExtResource("4_ky4s4")

[node name="PointLight2D" type="PointLight2D" parent="AnimatedSprite2D/tpp"]
position = Vector2(0, -10)
color = Color(0.666667, 0.0784314, 0, 1)
energy = 1.26
texture = ExtResource("5_qpng8")
texture_scale = 0.02

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(0, -20)
zoom = Vector2(3.5, 3.5)
position_smoothing_enabled = true
position_smoothing_speed = 8.0

[node name="Node2D" type="Node2D" parent="Camera2D"]
z_index = 25

[node name="Teleport" parent="." instance=ExtResource("6_6y066")]
modulate = Color(1, 1, 1, 0.454902)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-3, -6)
rect = Rect2(-10, -10, 26, 32)

[node name="mouseStretch" type="Marker2D" parent="."]
visible = false

[node name="Sprite2D" type="Sprite2D" parent="mouseStretch"]
scale = Vector2(0.0413793, 0.0413793)
texture = ExtResource("5_qpng8")

[node name="interactArea" type="Area2D" parent="." groups=["player"]]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="interactArea"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_4bcid")

[node name="dialogTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="debugText" type="Label" parent="."]
visible = false
offset_left = -22.0
offset_top = -30.0
offset_right = 141.0
scale = Vector2(0.278, 0.278)
text = "accel:"

[node name="collectAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("23_hnh6d")
volume_db = 3.388
pitch_scale = 0.96

[node name="footstepAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_vg4jm")

[node name="fallThump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("24_x075c")
volume_db = -10.0
pitch_scale = 0.79

[node name="materialFootstep" type="RayCast2D" parent="." node_paths=PackedStringArray("footStream")]
target_position = Vector2(0, 32)
hit_from_inside = true
script = ExtResource("25_v543r")
grass1 = ExtResource("8_vg4jm")
grass2 = ExtResource("9_7ukhu")
grass3 = ExtResource("10_yc71b")
metal1 = ExtResource("11_u8ed2")
metal2 = ExtResource("12_2jc7n")
metal3 = ExtResource("13_yi6rr")
wood1 = ExtResource("14_mbwwd")
wood2 = ExtResource("15_breqs")
wood3 = ExtResource("16_1x2s6")
farmlandTiles = ExtResource("26_gdvr1")
cityTiles = ExtResource("27_fgwwr")
woodTiles = ExtResource("28_btkl4")
footStream = NodePath("../footstepAudio")

[connection signal="animation_changed" from="AnimationPlayer" to="." method="_on_animation_player_animation_changed"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_animation_player_animation_started"]
[connection signal="animation_started" from="AnimationPlayer" to="materialFootstep" method="_on_animation_player_animation_started"]
